--- a/app/src/main/res/layout/words_summary_fragment.xml
+++ b/app/src/main/res/layout/words_summary_fragment.xml
@@ -6,9 +6,7 @@
         android:layout_height="match_parent"
         tools:context=".fragments.WordsSummaryFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello" android:id="@+id/txt_main"/>
-
+            android:layout_height="match_parent" android:id="@+id/rv_words" android:visibility="visible"/>
 </FrameLayout>
