--- a/app/src/main/res/layout/item_summary_word.xml
+++ b/app/src/main/res/layout/item_summary_word.xml
@@ -10,14 +10,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/txt_wordId" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:text="placeholder"
-            android:visibility="visible"/>
+            android:visibility="visible" android:textStyle="bold"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/txt_wordSummary"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_wordId" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:maxLength="60" android:singleLine="true" android:ellipsize="end"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:text="summary placeholder" android:visibility="visible"/>
+            android:visibility="visible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
