--- a/app/src/main/res/layout/fragment_add_word_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_word_dialog.xml
@@ -4,9 +4,20 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.AddWordDialogFragment">
+    
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/lyt_loading" android:visibility="gone" android:background="@android:color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-
+        <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar" android:layout_gravity="center" android:indeterminate="true"/>
+    </FrameLayout>
     <TextView
             android:text="@string/label_add_word"
             android:layout_width="wrap_content"
