--- a/app/src/main/res/layout/fragment_add_word_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_word_dialog.xml
@@ -4,20 +4,6 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.AddWordDialogFragment">
-    
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/lyt_loading" android:visibility="gone" android:background="@android:color/white">
-
-        <ProgressBar
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/progressBar" android:layout_gravity="center" android:indeterminate="true"/>
-    </FrameLayout>
     <TextView
             android:text="@string/label_add_word"
             android:layout_width="wrap_content"
@@ -49,4 +35,20 @@
             android:id="@+id/btn_positive" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             style="@style/Widget.AppCompat.Button.Colored" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_word"/>
+
+
+    <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/lyt_loading" android:visibility="gone" android:background="@android:color/white"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent">
+
+        <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/progressBar" android:layout_gravity="center" android:indeterminate="true"
+                tools:layout_width="match_parent"/>
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
