--- a/app/src/main/res/layout/item_summary_word.xml
+++ b/app/src/main/res/layout/item_summary_word.xml
@@ -5,6 +5,11 @@
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="60dp" android:visibility="visible">
 
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </FrameLayout>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
