--- a/app/src/main/res/layout/item_summary_word.xml
+++ b/app/src/main/res/layout/item_summary_word.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="wrap_content"
+                                                   android:layout_width="match_parent"
                                                    android:layout_height="60dp" android:visibility="visible">
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" android:id="@+id/lyt_underlay"
+            android:background="@android:color/holo_red_light">
 
     </FrameLayout>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_wordId" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:visibility="visible" android:textStyle="bold"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/txt_wordSummary"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_wordId" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:maxLength="60" android:singleLine="true" android:ellipsize="end"
-            android:visibility="visible"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/lyt_overlay" android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:background="@android:color/white">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/txt_wordId" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:visibility="visible" android:textStyle="bold"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/txt_wordSummary"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/txt_wordId" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:maxLength="60" android:singleLine="true"
+                android:ellipsize="end"
+                android:visibility="visible"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
